<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BookingHotel</string>
    <string name="booking_app">Booking App</string>
    <string name="enjoy_your_day">Enjoy your day</string>
    <string name="email">Email</string>
    <string name="email2">Email:</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="back">back</string>
    <string name="confirm">CONFIRM</string>
    <string name="verify_account">Verify account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="history">History</string>
    <string name="menu">Menu</string>
    <string name="another_function">Another Function</string>
    <string name="information">Information</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="faq">FaQ</string>
    <string name="declaration">Declaration</string>
    <string name="function">Function</string>
    <string name="sign_out">Sign out</string>
    <string name="favorite">Favorite</string>
    <string name="booking">Booking</string>
    <string name="explore">Explore</string>
    <string name="hey_what_would_you_like_to_booking_today">Hey, What would you like to booking today ?</string>
    <string name="list_room">List room</string>
    <string name="update_profile">Update profile</string>
    <string name="update_password">Update</string>
    <string name="change_password">Change User Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="full_name2">Full name:</string>
    <string name="phone2">Phone:</string>
    <string name="save">save</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="everything_right_where_you_need_it">We give you everything right here, where you need it</string>
    <string name="morning">Morning</string>
    <string name="good">Good</string>
    <string name="txtNight">Night</string>
    <string name="txtMorning">Morning</string>
    <string name="existing_user">Existing User? Sign In</string>
    <string name="large_text">
        \tVỀ CHÚNG TÔI:\n
        Được tạo ra vào năm 2022 ở Hutech, App được phát triển từ nhóm các bạn sinh viên trong quá trình thực hiện đồ án. App cung cấp các dịch vụ đặt phòng căn bản dựa trên nền tảng số hóa. App giúp mọi người dùng có trải nghiệm đặt phòng dễ dàng hơn.\n
        \tTHÔNG TIN LIÊN HỆ:\n
        Trụ sở chính:Dien Bien Phu, BinhThanh, HoChiMinh\n
        Email : DuaConBinhDuong@gmail.com\n
        Điện thoại : 0703603785 ( Admin )\n
    </string>
    <string name="welcome_to_hotel">Welcome to Hotel</string>
    <string name="admin">admin</string>
    <string name="create_account">Create Account</string>
    <string name="update">Update</string>
    <string name="change_user_avatar">Change User Avatar</string>
    <string name="room_number">Room</string>
    <string name="price">Price</string>
    <string name="description">description</string>
    <string name="double_bed">Double bed</string>
    <string name="single_bed">Single bed</string>
    <string name="room_type">Room Type</string>
    <string name="room_type2">Room Type:</string>
    <string name="type">type</string>
    <string name="about">About</string>
    <string name="please_wait_this_may_take_a_moment">Please wait! This may take a moment.</string>
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_yes">yes</string>
    <string name="filter_by_type">Filter by type</string>
    <string name="text_filter_options">Filter</string>
    <string name="filter_by_price">Filter by price</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="sort_by_type">Sort by type</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="_0">0</string>
    <string name="_10000000">10000000</string>
    <string name="review">Review</string>
    <string name="see_all">See All</string>
    <string name="send_review">Send Review</string>
    <string name="your_review">Your review</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="booking_your_room"><u>BOOKING YOUR ROOM</u> </string>
    <string name="check_in_date">Check In Date:</string>
    <string name="check_in_date2">Check In Date</string>
    <string name="check_out_date">Check Out Date:</string>
    <string name="check_out_date2">Check Out Date</string>
    <string name="stay_date">Stay date:</string>
    <string name="amount">Amount:</string>
    <string name="notification">Notification</string>
    <string name="submit">Submit</string>
    <string name="booking_date">booking date:</string>
    <string name="your_bill">your bill</string>
    <string name="retry" tools:ignore="PrivateResource">retry</string>
</resources>