<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_filter_options"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <RadioGroup
        android:id="@+id/filter_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_price"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/price_slide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1000000"
            android:valueFrom="0"
            android:valueTo="10000000"
            app:thumbColor="@color/SecondaryColor"
            app:tickColor="@color/SecondaryLightColor"
            app:trackColor="@color/SecondaryDarkColor"
            tools:ignore="SpeakableTextPresentCheck" />

    </RadioGroup>


    <RadioGroup
        android:id="@+id/filter_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_type"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/blank_radio"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/order_double"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/double_bed"
            android:text="@string/double_bed"
            android:textColor="#000"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/order_single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/single_bed"
            android:text="@string/single_bed"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/reset"
            android:textColor="@color/blue_soft"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/cancel"
            android:textColor="@color/blue_soft"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:textColor="@color/blue_soft"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>