<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".signIn_Up.SignIn">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/good_morning_img"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="@string/good"
                android:textColor="#ffffff"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="@string/morning"
                android:textColor="#ffffff"
                android:textSize="40sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="#deff00" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/logan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/calibri"
        android:gravity="center"
        android:text="@string/everything_right_where_you_need_it"
        android:textColor="#E0F2F1"
        android:textSize="15sp"
        tools:ignore="SmallSp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/app_image"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_below="@id/logan"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:foregroundGravity="center"
        android:src="@mipmap/ic_launcher"
        app:civ_border_width="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TenTaiKhoan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff"
            android:theme="@style/TextInputLayoutStyle"
            app:endIconMode="clear_text"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_TenTaiKhoan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/gmail"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:autoSizeTextType="uniform"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/MatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff"
            android:theme="@style/TextInputLayoutStyle"
            app:endIconMode="password_toggle"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_MatKhau"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/password"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:autoSizeTextType="uniform"
                tools:ignore="Autofill" />

            <CheckBox
                android:id="@+id/chbRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#666666"
                android:gravity="center"
                android:text="@string/remember_me"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_DangNhap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="@font/calibri"
                android:text="@string/sign_in"
                android:textColor="#96ffffff"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_DangKy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="@font/calibri"
                android:text="@string/sign_up"
                android:textColor="#96ffffff"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_QuenMatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/calibri"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="#96ffffff"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>
